--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "An interview task I'm to submit by sunday",
   "main": "server.ts",
   "scripts": {
-     "build": "tsc",
+    "build": "tsc",
+    "test": "jest",
     "start": "ts-node ./server.ts",
     "dev": "nodemon ./server.ts",
     "lint": "eslint *.{js,ts}",
-    "fix": "eslint *.{js,ts} --fix",
-    "prepare": "husky",
-    "prepush": "yarn lint",
-    "dev:pull": "git pull origin dev",
-    "push": "git push origin $(git rev-parse --abbrev-ref HEAD)"
+    "fix": "eslint *.{js,ts} --fix"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
@@ -29,12 +26,16 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
+    "@types/supertest": "^6.0.3",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
     "typescript": "^5.8.3"
   },
@@ -43,7 +44,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jest": "^29.7.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
