--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "prepare": "husky",
     "start": "ts-node ./server.ts",
     "dev": "nodemon ./server.ts",
     "lint": "eslint *.{js,ts}",
