--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "jest",
     "prepare": "husky",
-    "start": "ts-node server.js",
+    "start": "ts-node ./server.ts",
     "dev": "nodemon ./server.ts",
     "lint": "eslint *.{js,ts}",
     "fix": "eslint *.{js,ts} --fix"
